@@ -112,6 +112,7 @@ export("+.section",
        mapPlot,
        mapPoints,
        mapPolygon,
+       mapScalebar,
        mapText,
        mapZones,
        map2lonlat,
